--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-<!-- breadcrumb part start-->
+<!-- Breadcrumb part start-->
 <section class="breadcrumb_part">
     <div class="container">
         <div class="row">
@@ -19,8 +19,9 @@
         </div>
     </div>
 </section>
-<!-- breadcrumb part end-->
-<!-- Spinning overlay section  -->
+<!-- Breadcrumb part end-->
+
+<!-- Spinning overlay section -->
 <div id="loading-overlay">
     <h1 class="text-light logo-font loading-spinner">
         <span class="icon">
@@ -29,7 +30,8 @@
     </h1>
 </div>
 <!-- Spinning overlay end -->
-<!--================Checkout Area =================-->
+
+<!-- Checkout Area Start-->
 <section class="cart_area section_padding">
 <div class="container">
     <div class="row">
