--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-<!-- breadcrumb part start-->
+<!-- Breadcrumb part start-->
 <section class="breadcrumb_part">
     <div class="container">
         <div class="row">
@@ -20,7 +20,8 @@
         </div>
     </div>
 </section>
-<!-- breadcrumb part end-->
+<!-- Breadcrumb part end-->
+<!-- Profile Form start -->
 <section class="cart_area section_padding">
     <div class="container">
         <div class="row">
@@ -77,6 +78,7 @@
         </div>
     </div>
 </section>
+<!-- Profile Form End -->
 {% endblock %}
 
 {% block postloadjs %}
