--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -7,37 +7,37 @@
 {% endblock %}
 
 {% block content %}
-<!-- breadcrumb part start-->
+<!-- Breadcrumb part start-->
 <section class="breadcrumb_part">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="breadcrumb_iner">
-                    <h2>Thank You!</h2>
-                </div>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="breadcrumb_iner">
+          <h2>Thank You!</h2>
         </div>
+      </div>
     </div>
+  </div>
 </section>
-<!-- breadcrumb part end-->
-<!--confirmation part start -->
+<!-- Breadcrumb part end-->
+<!-- Confirmation part start -->
 <section class="confirmation_part section_padding">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
         <div class="confirmation_tittle">
-          <span>
+          <div>
             <h6>Your order has been received.</h6>
             <p>A confirmation email will be sent to {{ order.email }}</p>
-          </span>
+          </div>
         </div>
         <hr>
       </div>
       <div class="row">
         <div class="col-12 col-lg-6 order-lg-last mb-5">
-          <p class="text-muted">
+          <div class="text-muted">
             <h5>Your Order:</h5>
-          </p>
+          </div>
           <div class="row">
             <div class="col-7 offset-2">
               <p class="mb-1 mt-0 text-muted">Title</p>
@@ -80,40 +80,40 @@
           </div>
         </div>
         <div class="col-12 col-lg-6">
-          <p class="text-muted">
+          <div class="text-muted">
             <h5>Order Summary:</h5>
-          </p>
+          </div>
           <div class="single_confirmation_details">
             <ul>
               <li>
-                <span class="mb-1 mt-0 small text-muted">Order Number:</span><span> {{ order.order_number|truncatechars:6 }}</span>
+                <span class="mb-1 mt-0 small text-muted w-25">Order Number:</span><span class="w-75"> {{ order.order_number|truncatechars:6 }}</span>
               </li>
               <li>
-                <span class="mb-1 mt-0 small text-muted">Order Date:</span><span> {{ order.date }}</span>
+                <span class="mb-1 mt-0 small text-muted w-25">Order Date:</span><span class="w-75"> {{ order.date }}</span>
               </li>
-              <hr>
+
               <li>
-                <span class="mb-1 mt-0 small text-muted">Name:</span><span> {{ order.full_name }}</span>
-              </li>
-              <li>
-                <span class="mb-1 mt-0 small text-muted">Phone Number:</span><span> {{ order.phone_number }}</span>
+                <span class="mb-1 mt-0 small text-muted w-25">Name:</span><span class="w-75"> {{ order.full_name }}</span>
               </li>
               <li>
-                <span class="mb-1 mt-0 small text-muted">Street:</span><span> {{ order.street_address1 }}</span>
+                <span class="mb-1 mt-0 small text-muted w-25">Phone Number:</span><span class="w-75"> {{ order.phone_number }}</span>
+              </li>
+              <li>
+                <span class="mb-1 mt-0 small text-muted w-25">Street:</span><span class="w-75"> {{ order.street_address1 }}</span>
               </li>
               {% if order.street_address2 %}
               <li>
-                <span class="mb-1 mt-0 small text-muted">Street:</span><span> {{ order.street_address2 }}</span>
+                <span class="mb-1 mt-0 small text-muted w-25">Street:</span><span class="w-75"> {{ order.street_address2 }}</span>
               </li>
               {% endif %}
               <li>
-                <span class="mb-1 mt-0 small text-muted">Postcode:</span><span> {{ order.postcode }}</span>
+                <span class="mb-1 mt-0 small text-muted w-25">Postcode:</span><span class="w-75"> {{ order.postcode }}</span>
               </li>
               <li>
-                <span class="mb-1 mt-0 small text-muted">Town:</span><span> {{ order.town }}</span>
+                <span class="mb-1 mt-0 small text-muted w-25">Town:</span><span class="w-75"> {{ order.town }}</span>
               </li>
               <li>
-                <span class="mb-1 mt-0 small text-muted">Country:</span><span> {{ order.country }}</span>
+                <span class="mb-1 mt-0 small text-muted w-25">Country:</span><span class="w-75"> {{ order.country }}</span>
               </li>
             </ul>
           </div>
@@ -131,5 +131,5 @@
     </div>
   </div>
 </section>
-<!--confirmation part end -->
+<!-- Confirmation part end -->
 {% endblock %}
