--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,7 +11,8 @@
                     <div class="banner_text_iner">
                         <h1>Hanneles Original Art</h1>
                         <p>Don't buy commodity prints when you can get affordable original paintings!</p>
-                        <a href="{% url 'products' %}" aria-label="Visit our paintings page" class="btn_1 text-white">Buy real
+                        <a href="{% url 'products' %}" aria-label="Visit our paintings page"
+                            class="btn_1 text-white">Buy real
                             art</a>
                     </div>
                 </div>
@@ -23,20 +24,23 @@
     </div>
 </section>
 <!-- Banner Part End-->
+<!-- Reviews Heading Start -->
 <hr>
 <div class="container">
     <div class="row mb-2">
         <div class="col-lg-12">
             <div class="breadcrumb_iner text-center">
-                <a href="{% url 'reviews' %}"><h2 class="review_heading">What our customers say</h2></a>
+                <a href="{% url 'reviews' %}">
+                    <h2 class="review_heading">What our customers say</h2>
+                </a>
             </div>
         </div>
     </div>
 </div>
-<!-- Review Slider  -->
+<!-- Reviews Heading End -->
+<!-- Review Slider Start -->
 {% include 'includes/slider.html' %}
-<!-- Review Slider  -->
-
+<!-- Review Slider End -->
 <!-- Subscribe Part Start -->
 <section class="subscribe_part section_padding">
     <div class="container">
@@ -54,7 +58,8 @@
                                     <div id="mc_embed_signup_scroll">
                                         <div class="mc-field-group">
                                             <input type="email" name="EMAIL" class="required email" id="mce-EMAIL"
-                                                required="" value="" placeholder="Enter your Email address"></div>
+                                                required="" value="" placeholder="Enter your Email address">
+                                        </div>
                                         <div id="mce-responses" class="clear foot">
                                             <div class="response" id="mce-error-response" style="display: none;">
                                             </div>
@@ -96,8 +101,7 @@
     </div>
 </section>
 <!-- Subscribe Part End -->
-
-<!--::footer_part start::-->
+<!-- Footer part start -->
 <footer class="footer_part">
     <div class="footer_iner">
         <div class="container">
@@ -105,15 +109,20 @@
                 <div class="col-6">
                     <div class="footer_menu">
                         <div class="footer_logo">
-                            <a href="{% url 'home' %}"><img src="https://hanneles-art-gallery.s3.eu-north-1.amazonaws.com/media/logo.png" alt="#"></a>
-                        </div>                      
+                            <a href="{% url 'home' %}"><img
+                                    src="https://hanneles-art-gallery.s3.eu-north-1.amazonaws.com/media/logo.png"
+                                    alt="#"></a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="social_icon float-right px-2">
-                        <a href="https://www.facebook.com/61555624246656/" aria-label="Visit us on Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-f px-10"></i></a>
-                        <a href="https://www.instagram.com/" aria-label="Visit us on Instagram" target="_blank" rel="noopener"><i class="fab fa-instagram px-2"></i></a>
-                        <a href="https://www.linkedin.com/" aria-label="Visit us on Linkedin" target="_blank" rel="noopener"><i class="fab fa-linkedin-in px-2"></i></a>
+                        <a href="https://www.facebook.com/61555624246656/" aria-label="Visit us on Facebook"
+                            target="_blank" rel="noopener"><i class="fab fa-facebook-f px-10"></i></a>
+                        <a href="https://www.instagram.com/" aria-label="Visit us on Instagram" target="_blank"
+                            rel="noopener"><i class="fab fa-instagram px-2"></i></a>
+                        <a href="https://www.linkedin.com/" aria-label="Visit us on Linkedin" target="_blank"
+                            rel="noopener"><i class="fab fa-linkedin-in px-2"></i></a>
                     </div>
                 </div>
             </div>
@@ -126,14 +135,17 @@
                     <div class="copyright_text">
                         <P>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;<script>
+                            Copyright &copy;
+                            <script>
                                 document.write(new Date().getFullYear());
                             </script> All rights reserved | This template is made with <i class="ti-heart"
-                                aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" rel="noopener">Colorlib</a>
+                                aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank"
+                                rel="noopener">Colorlib</a>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </P>
                         <div class="copyright_link">
-                            <a href="{% url 'privacy_policy' %}" target="_blank" aria-label="Have a look at our Privacy Policy">Privacy Policy</a>
+                            <a href="{% url 'privacy_policy' %}" target="_blank"
+                                aria-label="Have a look at our Privacy Policy">Privacy Policy</a>
                         </div>
                     </div>
                 </div>
@@ -141,7 +153,7 @@
         </div>
     </div>
 </footer>
-<!--::footer_part end::-->
+<!-- Footer part end -->
 {% endblock %}
 {% block mailchimpjs %}
 <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
@@ -164,7 +176,7 @@
     }(jQuery));
     var $mcj = jQuery.noConflict(true);
 </script>
-</div>
+
 {% endblock %}
 {% block caroouseljs %}
 <script type="text/javascript">
