--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<!-- breadcrumb part start-->
+<!-- Breadcrumb part start-->
 <section class="breadcrumb_part">
     <div class="container">
         <div class="row">
@@ -15,10 +15,8 @@
         </div>
     </div>
 </section>
-<!-- breadcrumb part end-->
-
-
-<!--================Checkout Area =================-->
+<!-- Breadcrumb part end-->
+<!-- Checkout Area Start -->
 <section class="cart_area section_padding">
 <div class="container">
     <div class="row">
@@ -47,7 +45,7 @@
     </div>
 </div>
 </section>
-<!--================End Checkout Area =================-->
+<!-- Checkout Area End -->
 
 {% endblock %}
 
