--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -2,120 +2,120 @@
 {% load static %}
 
 {% block content %}
- <!-- breadcrumb part start-->
- <section class="breadcrumb_part single_product_breadcrumb">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="breadcrumb_iner">
-                </div>
-            </div>
-        </div>
+<!-- breadcrumb part start-->
+<div class="breadcrumb_part single_product_breadcrumb">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="breadcrumb_iner">
+          </div>
+      </div>
     </div>
-</section>
-<!-- breadcrumb part end-->
-
-<!--================Single Product Area =================-->
+  </div>
+</div>
+<!-- Breadcrumb part end -->
+<!-- Single Product Area Start -->
 <div class="product_image_area">
-<div class="container">
-  <div class="row text-center">
-    <div class="col-lg-12">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-lg-12">
         <div class="single_product_img">
           {% if product.image %}
-          <a href="{{ product.image.url }}"> <img src="{{ product.image.url }}" target="_blank" alt="{{ product.name }} {{ product.technique }}" class="img-fluid painting-image"></a>
+          <a href="{{ product.image.url }}" target="_blank"><img src="{{ product.image.url }}"
+              alt="{{ product.name }} {{ product.technique }}" class="img-fluid painting-image"></a>
           {% else %}
           <img src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }} {{ product.technique }}" class="img-fluid">
           {% endif %}
-        </div>      
+        </div>
       </div>
     </div>
     <div class="col-12">
-        <div class="single_product_text text-center">
-            <h3>{{ product.name }}</h3>
-            <p>{{ product.category.friendly_name }}</p>
-            <hr>
+      <div class="single_product_text text-center">
+        <h3>{{ product.name }}</h3>
+        <p>{{ product.category.friendly_name }}</p>
+        <hr>
         <div class="row">
           <div class="col-12 col-sm-6 col-md-3">
             <div class="single_product_text text-center">
-                <h4>Format:</h4>
-                <p>{{ product.format }}</p>
+              <h4>Format:</h4>
+              <p>{{ product.format }}</p>
             </div>
-        </div>
-            <div class="col-12 col-sm-6 col-md-3">
-              <div class="single_product_text text-center">
-                  <h4>Dimension:</h4>
-                  <p>{{ product.size }}</p>
-              </div>
           </div>
           <div class="col-12 col-sm-6 col-md-3">
             <div class="single_product_text text-center">
-                <h4>Technique:</h4>
-                <p>{{ product.technique }}</p>
+              <h4>Dimension:</h4>
+              <p>{{ product.size }}</p>
             </div>
-        </div>
-        <div class="col-12 col-sm-6 col-md-3">
-          <div class="single_product_text text-center">
+          </div>
+          <div class="col-12 col-sm-6 col-md-3">
+            <div class="single_product_text text-center">
+              <h4>Technique:</h4>
+              <p>{{ product.technique }}</p>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-3">
+            <div class="single_product_text text-center">
               <h4>Framed:</h4>
               <p>{{ product.framed }}</p>
+            </div>
           </div>
-      </div>
         </div>
         <hr>
         {% if product.sold is True %}
         <p class="text-uppercase">sold</p>
         {% else %}
-          <div class="add_to_cart">
-            <h4>Price:</h4>             
-                <p class="price">€ {{ product.price }}</p>
-                <div class="row">
-                  <div class="col-12">
-    </div>
-      </div>
-    </div>
+        <div class="add_to_cart">
+          <h4>Price:</h4>
+          <p class="price">€ {{ product.price }}</p>
+          <div class="row">
+            <div class="col-12">
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
 <div class="container">
-<div class="row text-center">
-  <div class="col-12">    
+  <div class="row text-center">
+    <div class="col-12">
       <form class="form" method="POST" action="{% url 'add_to_cart' product.id %}">
         {% csrf_token %}
         <div class="btn-group float-center">
-        <input class="form-control qty-input" type="hidden" name="quantity" value="1" min="0" max="1"
-          data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
-        <input type="submit" class="btn_1 m-2" role="button" aria-label="Add to shopping cart" value="Add to cart">      
-        <a href="{% url 'products' %}" class="btn_1 text-white m-2" role="button" aria-label="Continue Shopping">Continue shopping</a>
-        <input type="hidden" name="redirect_url" value="{{ request.path }}">
-      </div>
+          <input class="form-control qty-input" type="hidden" name="quantity" value="1" data-item_id="{{ product.id }}"
+            id="id_qty_{{ product.id }}">
+          <input type="submit" class="btn_1 m-2" aria-label="Add to shopping cart" value="Add to cart">
+          <a href="{% url 'products' %}" class="btn_1 text-white m-2" role="button"
+            aria-label="Continue Shopping">Continue shopping</a>
+          <input type="hidden" name="redirect_url" value="{{ request.path }}">
+        </div>
       </form>
-  </div>
-</div>
-{% endif %}  
-{% if request.user.is_superuser %}
-<div class="row text-center m-2">
-  <div class="col-12">
-    <span>
-<div class="btn-group">
-  <a href="{% url 'edit_product' product.id %}" class="btn_1 text-white m-2" role="button" aria-label="Update" title="Update">Update</a>
-  <a href="{% url 'delete_product' product.id %}" class="btn_1 text-white m-2 confirm-delete" aria-label="Delete" role="button" title="Delete">Delete</a>
-{% endif %}
     </div>
+  </div>
+  {% endif %}
+  {% if request.user.is_superuser %}
+  <div class="row text-center m-2">
+    <div class="col-12">
+      <span>
+        <div class="btn-group">
+          <a href="{% url 'edit_product' product.id %}" class="btn_1 text-white m-2" role="button" aria-label="Update"
+            title="Update">Update</a>
+          <a href="{% url 'delete_product' product.id %}" class="btn_1 text-white m-2 confirm-delete"
+            aria-label="Delete" role="button" title="Delete">Delete</a>
+        </div>
       </span>
     </div>
   </div>
-
-  </div>
+  {% endif %}
 </div>
-</div>
-<!--================End Single Product Area =================-->
+<!-- Single Product Area End -->
 {% endblock %}
 
 {% block postloadjs %}
-    {{ block.super }}
-        <script type="text/javascript">
-        $(document).on('click', '.confirm-delete', function(){
-            return confirm('Are you sure you want to delete the painting?');
-        })
-        </script>
+  {{ block.super }}
+      <script>
+      $(document).on('click', '.confirm-delete', function(){
+          return confirm('Are you sure you want to delete the painting?');
+      })
+      </script>
 {% endblock %}
