--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4672,7 +4672,7 @@ input:focus {
 }
 
 /* line 928, /Applications/MAMP/htdocs/old/palash/cl/shop_html/sass/_product.scss */
-.product_description_area .tab-content .total_rate .rating_list .list li:nth-child a i:last-child {
+.product_description_area .tab-content .total_rate .rating_list .list a i:last-child {
   color: #eeeeee;
 }
 
@@ -6300,7 +6300,7 @@ input:focus {
 .new_arrival .single_arrivel_item .hover_text p {
   font-size: 16px;
   color: #fff;
-  letter-spacing: 2;
+  letter-spacing: 2px;
 }
 
 /* line 110, /Applications/MAMP/htdocs/old/palash/cl/shop_html/sass/_new_arrival.scss */
@@ -6996,7 +6996,7 @@ h6 {
 
 /* line 340, /Applications/MAMP/htdocs/old/palash/cl/shop_html/sass/_elements.scss */
 .genric-btn.disable {
-  color: #222222, 0.3;
+  color: #222222;
   background: #f9f9ff;
   border: 1px solid transparent;
   cursor: not-allowed;
