Add validation result images to readme

--- a/home/templates/home/reviews.html
+++ b/home/templates/home/reviews.html
@@ -44,7 +44,7 @@
     </div>
     {% else %}
     <hr>
-    <p><strong>{{ user.username }}</strong>, you have already submitted your review and only one review is permitted!</p>
+    <p><strong>{{ user.username }}</strong>, your review has been added!</p>
     {% endif %}
     {% endif %}
   </div>
