--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,15 +10,15 @@ h1, h2, h3, h4 {
 }
 .btn_3 {
 	background-color: transparent;
-	border: 1px solid #B08EAD;
-	color: #B08EAD;
+	border: 1px solid #795376 !important;
+	color: #795376 !important;
 }
 .btn_3:hover {
 	background-color: #B08EAD;
 	color: #fff;
 }
 a:hover {
-    color: #B08EAD !important;
+    color: #795376 !important;
 }
 .btn-group {
     width: 100%;
@@ -203,7 +203,7 @@ a:hover {
 }
 .btn-group .btn_1:hover {
 	background-color: #fff;
-	color: #B08EAD;
+	color: #795376;
 }
 .product_image_area .single_product_text {
     margin: 30px 0 30px;
