--- a/static/css/base.css
+++ b/static/css/base.css
@@ -28,12 +28,16 @@ a:hover {
 /* Navigation bar */
 .navbar {
     box-shadow: none;
+    justify-content: space-evenly;
 }
 .navbar-light .navbar-brand {
     color: #795376;
     font-weight: 400;
     line-height: 0.7;
     margin-top: 10px;
+}
+.main_menu a i {
+    margin-left: 5px !important;
 }
 .main_menu .main-menu-item ul li .nav-link {
     text-transform: uppercase !important;
@@ -103,6 +107,7 @@ a:hover {
     max-width: 300px;
     height: 50px;
     text-align: center;
+    margin: auto;
 }
 .search-input {
     width: 100%;
@@ -387,7 +392,7 @@ i {
     color: #795376;
 }
 .card {
-    border: none !important;
+    border: 0 !important;
 }
 
 /* Mailchimp subscription form  */
