--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -35,7 +35,7 @@
 <section class="cart_area section_padding">
 <div class="container">
     <div class="row">
-        <div class="col-12 col-lg-6 order-lg-last mb-5">
+        <div class="col-12 col-lg-4 order-lg-last mb-5">
             <p class="text-muted"><h5 id="h5-padding">Order Summary:</h5></p>
             <div class="row">
                 <div class="col-7 offset-2">
@@ -79,7 +79,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-lg-6">
+        <div class="col-12 col-lg-8">
             <p class="text-muted"><h5 id="h5-padding">Please fill out the form to complete your order.</h5></p>
             <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                 {% csrf_token %}
@@ -126,7 +126,7 @@
                     <!-- Pass the client secret to the view so we can get the payment intent id -->
                     <input type="hidden" value="{{ client_secret }}" name="client_secret">
                 </fieldset>
-                <div class="btn-group" role="group">
+                <div class="btn-group ml-3" role="group">
                     <a class="btn_1 text-white text-center btn-responsive" role="button" aria-label="View cart" href="{% url 'view_cart' %}"><span class="icon">
                             <i class="fas fa-chevron-left text-white pr-1"></i>
                         </span>
@@ -136,7 +136,7 @@
                     </button>
                 </div>
                 <p></p>
-                <span class="icon">
+                <span class="icon ml-3">
                     <i class="fas fa-exclamation-circle"></i>
                 </span>
                 <span>Your card will be charged with <strong>€{{ grand_total|floatformat:2 }}</strong></span>
@@ -144,6 +144,7 @@
         </div>
     </div>
   </div>
+  .
 </section>
 <!--End Checkout Area -->
 
