--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -120,7 +120,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row mt-3">
       <div class="col-lg-12">
         {% if from_profile %}
         <a class="btn_1 text-white" href="{% url 'profile' %}" aria-label="Back to profile">Back to Profile</a>
