--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -107,12 +107,13 @@
         <div class="container">
             <div class="row justify-content-between align-items-center">
                 <div class="col-6">
-                    <div class="footer_menu">
-                        <div class="footer_logo">
-                            <a href="{% url 'home' %}"><img
-                                    src="https://hanneles-art-gallery.s3.eu-north-1.amazonaws.com/media/logo.png"
-                                    alt="#"></a>
-                        </div>
+                    <div>
+                        <p class="text-uppercase font-weight-bold">Hanneles Art</p>
+                        <p>Gallery & Academy</p>
+                        <p>Tavlavägen 123</p>
+                        <p>SE-123 45 Gävle</p>
+                        <p><i class="fa-solid fa-phone"></i>  076-555 00 007</p>
+                        <p><i class="fa-regular fa-envelope"></i>  info@hanneles.com</p>
                     </div>
                 </div>
                 <div class="col-6">
@@ -121,8 +122,6 @@
                             target="_blank" rel="noopener"><i class="fab fa-facebook-f px-10"></i></a>
                         <a href="https://www.instagram.com/" aria-label="Visit us on Instagram" target="_blank"
                             rel="noopener"><i class="fab fa-instagram px-2"></i></a>
-                        <a href="https://www.linkedin.com/" aria-label="Visit us on Linkedin" target="_blank"
-                            rel="noopener"><i class="fab fa-linkedin-in px-2"></i></a>
                     </div>
                 </div>
             </div>
