--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -3,7 +3,7 @@
         <div class="row align-items-center justify-content-center">
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg navbar-light">
-                    <div class="logo">
+                    <div class="logo pt-1">
                         <a class="navbar-brand logo-font logo-text" href="{% url 'home' %}">
                             Hanneles Art
                             <p class="logo-subtext">Gallery & Academy</p>
