Add description about review template to readme file

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -389,7 +389,7 @@ i {
 
 /* Review slider */
 .review_heading {
-    color: #795376;
+    color: rgb(121, 83, 118);
 }
 .card {
     border: 0 !important;
