--- a/academy/templates/academy/blog.html
+++ b/academy/templates/academy/blog.html
@@ -26,7 +26,9 @@
                 {% for post in posts %}
                 <div class="blog_left_sidebar">
                     <article class="blog_item">
+                        
                         <div class="blog_item_img">
+                            <div class="blog-container">
                         {% if post.blog_image %}
                         
                             <img class="card-img rounded-0" src="{{ post.blog_image.url }}" alt="{{ post.header }}">
@@ -36,15 +38,13 @@
                                 <p class="text-white">{{ post.date_created | date:"M" }}</p>
                             </a>
                         </div>
-
+                    </div>
                         <div class="blog_details">
                             <a class="d-inline-block" href="{% url 'post_detail' post.slug %}">
                                 <h2>{{ post.header }}</h2>
                             </a>
                             <p>{{ post.introtext }}</p>
-                            <ul class="blog-info-link">
-                                <li><a href="#"><i class="far fa-user"></i> Travel, Lifestyle</a></li>
-                            </ul>
+
                         </div>
                     </article>
                 </div>
