--- a/templates/base.html
+++ b/templates/base.html
@@ -96,7 +96,10 @@
     </script>
     {% endblock %}
 
-    {% block carousel%}
+    {% block carousel %}
+    {% endblock %}
+
+    {% block pagination %}
     {% endblock %}
 </body>
 
