--- a/academy/templates/academy/blog.html
+++ b/academy/templates/academy/blog.html
@@ -54,6 +54,7 @@
                     </article>
                 </div>
                 {% endfor %}
+                {% include "includes/pagination.html" with page=posts %}
             </div>
             <div class="col-lg-4">
                 <div class="blog_right_sidebar">
@@ -89,28 +90,10 @@
                     </aside>
                 </div>
             </div>
+
         </div>
 
-        <nav class="blog-pagination justify-content-center d-flex">
-            <ul class="pagination">
-                <li class="page-item">
-                    <a href="#" class="page-link" aria-label="Previous">
-                        <i class="ti-angle-left"></i>
-                    </a>
-                </li>
-                <li class="page-item">
-                    <a href="#" class="page-link">1</a>
-                </li>
-                <li class="page-item active">
-                    <a href="#" class="page-link">2</a>
-                </li>
-                <li class="page-item">
-                    <a href="#" class="page-link" aria-label="Next">
-                        <i class="ti-angle-right"></i>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+        
     </div>
 </section>
 
@@ -119,6 +102,9 @@
 
 {% endblock %}
 
+{% block pagination %}
+
+{% endblock %}
 <!-- {% block postloadjs %}
 {{ block.super }}
 <script>
