--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -47,6 +47,8 @@
                                     Art Academy
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
+                                    <a class="dropdown-item" href="{% url 'blog' %}">All Articles</a>
+                                    <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="{% url 'blog' %}?category=getting_started"
                                     aria-label="Filter by category getting started">Getting Started</a>
                                     <a class="dropdown-item" href="{% url 'blog' %}?category=how_to"
