--- a/academy/templates/academy/update_post.html
+++ b/academy/templates/academy/update_post.html
@@ -9,14 +9,14 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
-                    <h2>Add Blog Post</h2>
+                    <h2>Update Blog Post</h2>
                 </div>
             </div>
         </div>
     </div>
 </section>
 <!-- Breadcrumb part end-->
-<!-- Add Blog Post Start -->
+<!-- Update Blog Post Start -->
 <section class="cart_area section_padding">
 <div class="container">
     <div class="row">
@@ -27,7 +27,7 @@
     </div>
     <div class="row">
         <div class="col-12 col-lg-6 order-lg-last mb-5">
-            <form action="{% url 'add_post' %}" method="POST" enctype="multipart/form-data">
+            <form action="{% url 'update_post' %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                         {{ form.as_p }}
                 <div class="text-right">
@@ -39,7 +39,7 @@
     </div>
 </div>
 </section>
-<!-- Add Blog Post End -->
+<!-- Update Blog Post End -->
 
 {% endblock %}
 
