--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -69,8 +69,11 @@
                                 </a>
                                 <div class="dropdown-menu" id="navbarDropdown_2">
                                     {% if request.user.is_authenticated %}
+                                    <p class="dropdown-item welcome text-muted">Welcome back, {{ user.username }}!</p>
+                                    <div class="dropdown-divider"></div>
                                     {% if request.user.is_superuser %}
                                     <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+                                    <a href="{% url 'blog_admin' %}" class="dropdown-item">Blog Management</a>
                                     {% endif %}
                                     <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                     <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
