--- a/academy/templates/academy/blog_admin.html
+++ b/academy/templates/academy/blog_admin.html
@@ -19,24 +19,27 @@
 <section class="trending_items">
     <div class="container">
         <div class="row">
+            {% for post in posts %}
             <div class="col-lg-4 col-sm-6">
-                {% for post in posts %}
+                
                 <div class="single_product_item">
+                    <div class="blog_admin_container">
                     <div class="single_product_item_thumb">
                         {% if post.blog_image %}
-                        <img src="{{ post.blog_image.url }}" alt="{{ post.header }}" class="img-fluid">
+                        <img src="{{ post.blog_image.url }}" alt="{{ post.header }}" class="blog-img-fluid">
                         {% endif %}
                     </div>
+                    </div>
                     <h4> <a href="#">{{ post.header }}</a> </h4>
-                    <p>{{ post.introtext }}</p>
+                    <p class="mb-2">{{ post.introtext }}</p>
                         {% if post.category %}
-                            <p><a href="{% url 'blog' %}?category={{ post.category.name }}"
+                            <p class="mb-2"><a href="{% url 'blog' %}?category={{ post.category.name }}"
                                     aria-label="Post Category"><i class="fa-solid fa-tag pr-2"></i> {{ post.category.friendly_name }}</a>
                             </p>
                         {% endif %}
-                        <p>{{ post.date_created }}</p>
+                        <p class="mb-2">Created: {{ post.date_created }}</p>
                         <span>
-                            <a href="#"
+                            <a href="{% url 'update_post' slug=post.slug %}"
                                 class="btn_1 text-white small primary-border px-3 py-1" role="button"
                                 aria-label="Update">Update
                             </a>
@@ -47,11 +50,11 @@
                             </a>
                         </span>
                 </div>
-                {% endfor %}
             </div>
+            {% endfor %}
             
-            {% include "includes/pagination.html" with page=posts %}
         </div>
+        {% include "includes/pagination.html" with page=posts %}
     </div>
 </section>
 <!-- trending item end-->
