--- a/academy/templates/academy/update_post.html
+++ b/academy/templates/academy/update_post.html
@@ -27,7 +27,7 @@
     </div>
     <div class="row">
         <div class="col-12 col-lg-6 order-lg-last mb-5">
-            <form action="{% url 'update_post' %}" method="POST" enctype="multipart/form-data">
+            <form action="{% url 'update_post' post.slug %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                         {{ form.as_p }}
                 <div class="text-right">
