--- a/static/css/base.css
+++ b/static/css/base.css
@@ -497,6 +497,18 @@ h5 {
     display: block !important;
     max-height: 100% !important;
 }
+.blog_admin_container {
+    height: 250px;
+}
+.single_product_item_thumb img {
+    width: auto !important;
+    display: block !important;
+    max-height: 100% !important;
+}
+.blog-img-fluid {
+    max-width: 100%;
+    height: 250px;
+}
 @media (max-width: 576px) {
     .blog-container {
         height: 100%;
