--- a/academy/templates/academy/academy.html
+++ b/academy/templates/academy/academy.html
@@ -21,36 +21,45 @@
 <section class="blog_area section_padding">
     <div class="container">
         <div class="row">
-            
             <div class="col-lg-8 mb-5 mb-lg-0">
                 {% for post in posts %}
                 <div class="blog_left_sidebar">
                     <article class="blog_item">
-                        
                         <div class="blog_item_img">
                             <div class="blog-container">
-                        {% if post.blog_image %}
-                        
-                            <img class="card-img rounded-0" src="{{ post.blog_image.url }}" alt="{{ post.header }}">
-                        {% endif %}
-                            <a href="{% url 'post_detail' post.slug %}" class="blog_item_date">
-                                <h3>{{ post.date_created | date:"d" }}</h3>
-                                <p class="text-white">{{ post.date_created | date:"M" }}</p>
-                            </a>
+                                {% if post.blog_image %}
+                                <img class="card-img rounded-0" src="{{ post.blog_image.url }}" alt="{{ post.header }}">
+                                {% endif %}
+                                <a href="{% url 'post_detail' post.slug %}" class="blog_item_date">
+                                    <h3>{{ post.date_created | date:"d" }}</h3>
+                                    <p class="text-white">{{ post.date_created | date:"M" }}</p>
+                                </a>
+                            </div>
                         </div>
-                    </div>
                         <div class="blog_details">
                             <a class="d-inline-block" href="{% url 'post_detail' post.slug %}">
                                 <h2>{{ post.header }}</h2>
                             </a>
                             {% if post.category %}
-                            <p><a href="{% url 'blog' %}?category={{ post.category.name }}"
+                            <p><a href="{% url 'academy' %}?category={{ post.category.name }}"
                                     aria-label="Post Category"><i class="fa-solid fa-tag pr-2"></i> {{ post.category.friendly_name }}</a>
                             </p>
                             {% endif %}
                             <p>{{ post.introtext }}</p>
 
                         </div>
+                        <span>
+                            <a href="{% url 'update_post' slug=post.slug %}"
+                                class="btn_1 text-white small primary-border px-3 py-1 blog_button" role="button"
+                                aria-label="Update">Update
+                            </a>
+                        </span>
+                        <span>
+                            <a href="{% url 'delete_post' slug=post.slug %}"
+                                class="btn_1 text-white small primary-border px-3 py-1 blog_button" role="button"
+                                id="delete-post" aria-label="Delete">Delete
+                            </a>
+                        </span>
                     </article>
                 </div>
                 {% endfor %}
@@ -58,45 +67,48 @@
             </div>
             <div class="col-lg-4">
                 <div class="blog_right_sidebar">
+                    <span>
+                        <a href="{% url 'create_post' %}"
+                            class="btn_1 text-white small primary-border px-3 py-1 mb-5 blog_button" role="button"
+                            aria-label="Create post">Create new blog post
+                        </a>
+                    </span>
                     <aside class="single_sidebar_widget post_category_widget">
                         <h4 class="widget_title">Category</h4>
                         <ul class="list cat-list">
                             <li>
-                                <a href="{% url 'blog' %}?category=tutorials"
-                                aria-label="Filter by category tutorials">Tutorials
+                                <a href="{% url 'academy' %}?category=tutorials"
+                                    aria-label="Filter by category tutorials">Tutorials
                                 </a>
                             </li>
                             <li>
-                                <a href="{% url 'blog' %}?category=color_pigment"
-                                aria-label="Filter by category color and pigments">Color & Pigments
+                                <a href="{% url 'academy' %}?category=color_pigment"
+                                    aria-label="Filter by category color and pigments">Color & Pigments
                                 </a>
                             </li>
                             <li>
-                                <a href="{% url 'blog' %}?category=light_shadow"
-                                aria-label="Filter by category light and shadow">Light & Shadow
+                                <a href="{% url 'academy' %}?category=light_shadow"
+                                    aria-label="Filter by category light and shadow">Light & Shadow
                                 </a>
                             </li>
                             <li>
-                                <a href="{% url 'blog' %}?category=how_to"
-                                aria-label="Filter by category how to">How to...
+                                <a href="{% url 'academy' %}?category=how_to" aria-label="Filter by category how to">How
+                                    to...
                                 </a>
                             </li>
                             <li>
-                                <a href="{% url 'blog' %}?category=getting_started"
-                                aria-label="Filter by category getting started">Getting Started
+                                <a href="{% url 'academy' %}?category=getting_started"
+                                    aria-label="Filter by category getting started">Getting Started
                                 </a>
                             </li>
                         </ul>
                     </aside>
                 </div>
             </div>
-
         </div>
-
-        
     </div>
 </section>
-
+<!-- Dialog section  -->
 <!--Blog Area end-->
 
 
@@ -105,16 +117,11 @@
 {% block pagination %}
 
 {% endblock %}
-<!-- {% block postloadjs %}
+{% block postloadjs %}
 {{ block.super }}
-<script>
-    $(document).on('click', '.confirm-delete', function () {
-        return confirm('Are you sure you want to delete the painting?');
-    })
-</script>
 <script>
     $('.btt-link').click(function (e) {
         window.scrollTo(0, 0)
     })
 </script>
-{% endblock %} -->
+{% endblock %}
