--- a/academy/templates/academy/post_detail.html
+++ b/academy/templates/academy/post_detail.html
@@ -40,7 +40,7 @@
                                 <h2>{{ post.header }}</h2>
                             </a>
                             {% if post.category %}
-                            <p><a href="{% url 'blog' %}?category={{ post.category.name }}"
+                            <p><a href="{% url 'academy' %}?category={{ post.category.name }}"
                                     aria-label="Post Category"><i class="fa-solid fa-tag pr-2"></i> {{ post.category.friendly_name }}</a>
                             </p>
                             {% endif %}
@@ -56,27 +56,27 @@
                         <h4 class="widget_title">Category</h4>
                         <ul class="list cat-list">
                             <li>
-                                <a href="{% url 'blog' %}?category=tutorials"
+                                <a href="{% url 'academy' %}?category=tutorials"
                                 aria-label="Filter by category tutorials">Tutorials
                                 </a>
                             </li>
                             <li>
-                                <a href="{% url 'blog' %}?category=color_pigment"
+                                <a href="{% url 'academy' %}?category=color_pigment"
                                 aria-label="Filter by category color and pigments">Color & Pigments
                                 </a>
                             </li>
                             <li>
-                                <a href="{% url 'blog' %}?category=light_shadow"
+                                <a href="{% url 'academy' %}?category=light_shadow"
                                 aria-label="Filter by category light and shadow">Light & Shadow
                                 </a>
                             </li>
                             <li>
-                                <a href="{% url 'blog' %}?category=how_to"
+                                <a href="{% url 'academy' %}?category=how_to"
                                 aria-label="Filter by category how to">How to...
                                 </a>
                             </li>
                             <li>
-                                <a href="{% url 'blog' %}?category=getting_started"
+                                <a href="{% url 'academy' %}?category=getting_started"
                                 aria-label="Filter by category getting started">Getting Started
                                 </a>
                             </li>
