--- a/static/css/base.css
+++ b/static/css/base.css
@@ -509,6 +509,15 @@ h5 {
     max-width: 100%;
     height: 250px;
 }
+.blog_area .blog_button a {
+    color: #fff !important;
+    text-decoration: none;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+}
+input .btn_1:hover {
+    color: #4B3049;
+}
 @media (max-width: 576px) {
     .blog-container {
         height: 100%;
